# rust-traQ-gazer

./: Dockerfile  README.md  api.sh  compose.yaml  db-down.sh  db-up.sh
.github/: dependabot.yml
.github/workflows/: server.yaml
docs/: openapi.yaml
schema/: openapi.yaml  schema.sql
server/: .env  Cargo.toml
server/.sqlx/: query-06cb30320469f174d1b892470017730108ada4035a7be05993a5b51065c54075.json  query-071554e534ae0285b61487ab5e9c0ac66c9470433e0fd5d30fce8561dc21d8a0.json  query-0c85cedeaa4596b2c9502fb1117e5b4395166143a20bed6d776392d8a1d91a41.json  query-165481c1b0d0ae827417789f98718f781f3ee0a2396e35ee623ffe620b1b5d2e.json  query-16e7e237d8fae0f937ad54173b379d476bbc9d4afc52708eb9de6a87a619d66c.json  query-21347db95bdd8eb84e88778dac06afe16efdae22640d37893c033027088e7d70.json  query-23c3375c4473731a4c831c6fef0e201dc829a29334e899364905f0744b8e4017.json  query-240b60be424754d335427a5e4f39d3fc49994a6eb1615f1443d09de92b956f09.json  query-2bf06a89fdc3120afb776eb639b49500b03c8aa5cfdfaba35650a307201bc170.json  query-31401d99de32ad0243ebfcc12eadd5cec0712b0535b7a14124126aeda18b94b1.json  query-3fbbff5157bf9da86edfc84958d47f67994d10c1125d44328eff4049544a1066.json  query-484178adc9d58ec136880007c74eaa1c3898f23d38e17cd9c90d82cf3edb66cb.json  query-48d64f47c0d97ab6ee5b28b3a960abf384f456a1a76fb95a3c47b44ce04b5151.json  query-50d8f4cf5da873e4e94cc843be66d4907cd94b84c16404cffccdb181410fd0c1.json  query-517b5616b1bdbc6dfa068512a7ffc8da8906994fb2b5cad41fc0a8460be75355.json  query-55884a755b05dc8ba28092e5aab6d3c119965b147d9cd44326607ef405bf2f5e.json  query-5e63d8d27727c036effc482951c83519cb1e8025c072dec9b830367824d342db.json  query-661ce544637c774d0e7672d6d19b84fe6dd6597fae11edcce9ef5ea1886be309.json  query-7217f2894339f9a2945e624f02febd706e24dfb2780067a26758e4a4ecfb23eb.json  (+13 more)
server/apis/: Cargo.toml  README.md
server/apis/.openapi-generator/: FILES
server/apis/src/: lib.rs  models.rs
server/apis/src/apis/: me.rs  me_stamps.rs  me_words.rs  mod.rs  similar.rs  stamps.rs  trend.rs  words.rs
server/apis/src/server/: mod.rs
server/app/: Cargo.toml
server/app/src/: config.rs  domain.rs  handler.rs  infra.rs  main.rs  repo.rs  traq.rs  usecase.rs
server/app/src/config/: repo.rs  traq.rs
server/app/src/domain/: notification.rs  stamp.rs  traq_message.rs  traq_stamp.rs  user.rs  word.rs
server/app/src/handler/: error.rs  similar.rs  stamps.rs  trend.rs  words.rs
server/app/src/infra/: handler.rs  repo.rs  traq.rs
server/app/src/infra/handler/: me.rs  me_stamps.rs  me_words.rs  similar.rs  stamps.rs  trend.rs  words.rs
server/app/src/infra/repo/: stamps.rs  traq_stamp.rs  user.rs  word.rs
server/app/src/infra/traq/: message.rs  message_collector.rs  message_poller_impl.rs  notification.rs  user_fetcher.rs
server/app/src/repo/: polling.rs  traq_message.rs  words.rs
server/app/src/traq/: message.rs
server/app/src/usecase/: message_poller.rs  message_processor.rs  stamp.rs  user_synchronizer.rs  word.rs
